[package]
name = "logram"
version = "2.0.0"
edition = "2018"
authors = ["Max Eliseev <ralvke@gmail.com>"]
description = "Pipe log updates to Telegram"
repository = "https://github.com/ralvke/logram"
readme = "README.md"
keywords = ["telegram", "bot", "log"]
license = "MIT"

[badges]
travis-ci = { repository = "Ralvke/logram", branch = "master" }

[dependencies]
